Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+4.8.4
+=====
+- Systray: Fix disappearing icons when drawing at 0,0 (bug #7057).
+- Panel: Fix panel loading in kiosk mode.
+- Common: Update online documentation help location.
+- Launcher: Fix spacing in vertical panel with arrow on the side (bug #7584).
+- Panel: Set window colormap and change autohide window type (bug #7435).
+- Migrate: Fix 4.6 migration of action buttons (bug #7543).
+- Libxfce4panel: Fix menu positioning for moved external plugins (bug #7529).
+- Panel: Improve thread-safety.
+- Libxfce4panel: Idle XfcePanelImage loading.
+- Pager: Make the pager message less scary.
+- Windowmenu: Do not update if screen is not initilized (bug #7728).
+- Libxfce4panel: Keep blinking forever (bug #7583).
+- Tasklist: Fix minimizing of active transient windows (bug #7674).
+- Tasklist: Add a sorting mode for tasklist reordering with dnd (bug #7058).
+- Translation updates (fi, sk, pt_BR, eu, nl).
+
 4.8.3
 =====
 - Tasklist: Work around segfaulting of group buttons.
