Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+4.8.5
+=====
+- Tasklist: Avoid unneeded dnd actions.
+- Launcher: Fix plugin size with arrow button (bug #7747).
+- Tasklist: Allow both motion activation and dnd (bug #7755).
+- Panel: Fix off-by-one error in strut sizes (bug #7739).
+- Tasklist: Fix assert in button dnd (bug #7741).
+- Panel: Make preferences dialog work in Gtk+ 2.24.5.
+- Systray: Add xfpm to known apps for a decent icon.
+- Tasklist: Drop Gtk 2.22 API.
+- Migrate: Fix 4.6 transparency migration (bug #7523).
+- Translation updates (nl, zh_CN, de, pt, ja).
+
 4.8.4
 =====
 - Systray: Fix disappearing icons when drawing at 0,0 (bug #7057).
