Fix a typo in French translation.

--- a/po/fr.po
+++ b/po/fr.po
@@ -1145,7 +1145,7 @@ msgstr "Ouvrir le répertoire"
 
 #: ../plugins/directorymenu/directorymenu.c:781
 msgid "Open in Terminal"
-msgstr "Ouvrir dans dans un _terminal"
+msgstr "Ouvrir dans un terminal"
 
 #: ../plugins/directorymenu/directorymenu.desktop.in.h:2
 msgid "Show a directory tree in a menu"
