Fix a typo in French translation.

--- a/po/fr.po
+++ b/po/fr.po
@@ -5,7 +5,7 @@
 # Collet Etienne <xanaxlnx@gmail.com>, 2005.
 # Maximilian Schleiss <maximilian@xfce.org>, 2006-2009.
 # Jérôme Guelfucci <jeromeg@xfce.org>, 2009
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.7.0\n"
@@ -1121,7 +1121,7 @@ msgstr "Ouvrir le répertoire"
 
 #: ../plugins/directorymenu/directorymenu.c:780
 msgid "Open in Terminal"
-msgstr "Ouvrir dans dans un _terminal"
+msgstr "Ouvrir dans un terminal"
 
 #: ../plugins/directorymenu/directorymenu.desktop.in.h:1
 #: ../plugins/directorymenu/directorymenu-dialog.glade.h:2
