--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,107 @@
+4.8.6
+=====
+- Panel: Wait until the wm is ready on all screens (bug #7161).
+- Systray: Control the thinkness of the frame (bug #7593).
+- Launcher: Fix broken compilation (bug #7966).
+- Launcher: Don't reconstruct the items on save (bug #7952).
+- Applicationsmenu: Fix segfault with not-existing menu (bug #7895).
+- Libxfce4panel: Avoid problem if panel is not yet realized.
+- Panel: Print string in case of an invalid position.
+- Libxfce4panel: Always try to return an icon.
+- Directorymenu: Also send the target directory as arg (bug #7745).
+- Translation updates (it, tr, nl, sk, pt_BR, te, zh_CN, pt, ru, ko,
+  ja, ro, fr, kk, ms, es, id, eu).
+
+4.8.5
+=====
+- Tasklist: Avoid unneeded dnd actions.
+- Launcher: Fix plugin size with arrow button (bug #7747).
+- Tasklist: Allow both motion activation and dnd (bug #7755).
+- Panel: Fix off-by-one error in strut sizes (bug #7739).
+- Tasklist: Fix assert in button dnd (bug #7741).
+- Panel: Make preferences dialog work in Gtk+ 2.24.5.
+- Systray: Add xfpm to known apps for a decent icon.
+- Tasklist: Drop Gtk 2.22 API.
+- Migrate: Fix 4.6 transparency migration (bug #7523).
+- Translation updates (nl, zh_CN, de, pt, ja).
+
+4.8.4
+=====
+- Systray: Fix disappearing icons when drawing at 0,0 (bug #7057).
+- Panel: Fix panel loading in kiosk mode.
+- Common: Update online documentation help location.
+- Launcher: Fix spacing in vertical panel with arrow on the side (bug #7584).
+- Panel: Set window colormap and change autohide window type (bug #7435).
+- Migrate: Fix 4.6 migration of action buttons (bug #7543).
+- Libxfce4panel: Fix menu positioning for moved external plugins (bug #7529).
+- Panel: Improve thread-safety.
+- Libxfce4panel: Idle XfcePanelImage loading.
+- Pager: Make the pager message less scary.
+- Windowmenu: Do not update if screen is not initilized (bug #7728).
+- Libxfce4panel: Keep blinking forever (bug #7583).
+- Tasklist: Fix minimizing of active transient windows (bug #7674).
+- Tasklist: Add a sorting mode for tasklist reordering with dnd (bug #7058).
+- Translation updates (fi, sk, pt_BR, eu, nl).
+
+4.8.3
+=====
+- Tasklist: Work around segfaulting of group buttons.
+- Tasklist: Properly initialize the monitor geometry on startup (bug #7340).
+- Use portable abicheck.sh from xfconf.
+- Panel: Avoid recursing gtk_main_quit() on signal.
+- Tasklist: Hide wireframe when window is destroyed (bug #7377).
+- Directorymenu: Remove unused varaible.
+- Pager: Fix typo in row warning.
+- Tasklist: Fix function prototype.
+- Panel: Do no inline function.
+- Tasklist: add button release event to proxy item (bug #7362).
+- Translation updates (zh_CN, tr, de).
+
+4.8.2
+=====
+- Change packing order of buttons in pager to match wnck.
+- Initialize tasklist viewport if screen is connected (bug #7255).
+- Set some atk object names on panel buttons without label.
+- Allow installation of the helpers in a custom location.
+- Set a static role for the panels (bug #7094). Reverted the previous fix.
+- Ask to start the panel if 'xfce4-panel -r' is called without instance.
+- Respawn a child if the plugin was realized with a pid.
+- Don't crash on a wrong colormap when changing screens.
+- Don't activate windows in tasklist when dnd a button or plugin.
+- Keep reference on window to avoid crash (bug #7193).
+- Activate windows on button release events (bug #7296).
+- Use the widget snapshot as tasklist draw icon.
+- Fix test so manual is installed (bug #7274).
+- Translation updates (he, sv, id, zh_CN, da, kk, pt, uk,
+  zh_TW, ja, ru).
+
+4.8.1
+=====
+- Make the panels sticky for some window managers (bug #7130).
+- Fix assert when storing property values in xfconf (bug #7117).
+- Migrate monitor information (bug #7135).
+- Cache launcher menu tooltip pixbuf (bug #7146).
+- Reverse menu item insert order (bug #7102).
+- Set and restore a unique role name for windows (bug #7094).
+- Don't return a critical on a NULL dbus session.
+- Allocate 1x1 requests offscreen in the systray (bug #7143 and #7057).
+- Popup window menu under cursor on window button group menus.
+- Directly start the panel on the correct screen (bug #7161).
+- Move the panel menu to the correct screen (bug #7203).
+- Fix dragging panels to another screen.
+- Open plugin dialogs on same screen as plugin.
+- Sync hidden window and panel screen.
+- Show launcher add dialog on the same screen as parent.
+- Fix autohide direction based on orientation and edge.
+- Deactivate menu button if loading menu failed.
+- Don't double expose the panel's child widget (bug #6872).
+- Remove unneeded check (bug #7149).
+- Don't disappear when wm restarts with compositing (bug #7194).
+- Properly update the plugin background when moving to other panel.
+- Unset visible event window in 4.6 plugins.
+- Various small code cleanups and improved debug messages.
+- Translation updates (eu, fr, ja, lt, sv).
+
 4.8.0
 =====
 - Restart tray allocation if number of rows overflows (bug #7055).
