Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -35,7 +35,16 @@
 - Panel: Add confirmation before creating launchers from dnd (bug #6926).
 - Applicationsmenu: Allow non-squared icons in applications button (bug #7381).
 - Panel: Save plugin-ids when removing and moving items in ed.
-- Translation updates ().
+- Tasklist: Bringing back 4.8 max-button-size property.
+- Tasklist: Capping buttons height when button labels are visible.
+- Tasklist: Reverting "ceil" to "floor" (as in 4.8).
+- Actions: Query visibility and save as strings.
+- Translation updates: Arabic, Catalan (Valencian), Czech, Danish,
+  German, Esperanto, Spanish (Castilian), Basque, Finnish, French,
+  Hebrew, Hungarian, Indonesian, Italian, Kazakh, Korean, Lithuanian,
+  Dutch (Flemish), Norwegian Nynorsk, Polish, Portuguese, Portuguese
+  (Brazilian), Russian, Slovak, Telugu, Turkish, Ukrainian, Chinese
+  (China), Chinese (Taiwan).
 
 4.9.0
 =====
