Actions: Fix mnemonics conflict (bug #8657).

--- a/po/ar.po
+++ b/po/ar.po
@@ -726,7 +726,7 @@ msgid "Lock Screen"
 msgstr "اقفل الشاشة"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "اقفل الشاشة"
 
 #: ../plugins/actions/actions.c:184
