--- a/po/ca.po
+++ b/po/ca.po
@@ -784,7 +784,7 @@ msgid "Lock Screen"
 msgstr "Blocar la pantalla"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "_Bloca la pantalla"
 
 #: ../plugins/actions/actions.c:180
