--- a/po/cs.po
+++ b/po/cs.po
@@ -766,7 +766,7 @@ msgid "Lock Screen"
 msgstr "Uzamknout obrazovku"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "U_zamknutí obrazovky"
 
 #: ../plugins/actions/actions.c:180
