--- a/po/da.po
+++ b/po/da.po
@@ -775,7 +775,7 @@ msgid "Lock Screen"
 msgstr "Lås skærm"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Lå_s skærm"
 
 #: ../plugins/actions/actions.c:184
