--- a/po/el.po
+++ b/po/el.po
@@ -781,7 +781,7 @@ msgid "Lock Screen"
 msgstr "Κλείδωμα οθόνης"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Κλ_είδωμα οθόνης"
 
 #: ../plugins/actions/actions.c:180
