--- a/po/eo.po
+++ b/po/eo.po
@@ -742,7 +742,7 @@ msgid "Lock Screen"
 msgstr "Ŝlosu la ekranon"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Ŝl_osu la ekranon"
 
 #: ../plugins/actions/actions.c:184
