--- a/po/es.po
+++ b/po/es.po
@@ -769,7 +769,7 @@ msgid "Lock Screen"
 msgstr "Bloquear pantalla"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Bl_oquear Pantalla"
 
 #: ../plugins/actions/actions.c:184
