--- a/po/et.po
+++ b/po/et.po
@@ -739,7 +739,7 @@ msgid "Lock Screen"
 msgstr "Lukusta ekraan"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "L_ukusta ekraan"
 
 #: ../plugins/actions/actions.c:184
