--- a/po/eu.po
+++ b/po/eu.po
@@ -771,7 +771,7 @@ msgid "Lock Screen"
 msgstr "Blokeatu pantaila"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Bl_okeatu pantaila"
 
 #: ../plugins/actions/actions.c:180
