--- a/po/fa.po
+++ b/po/fa.po
@@ -747,7 +747,7 @@ msgstr "_قفل کردن صفحه"
 
 #: ../plugins/actions/actions.c:179
 #, fuzzy
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "_قفل کردن صفحه"
 
 #: ../plugins/actions/actions.c:184
