--- a/po/fi.po
+++ b/po/fi.po
@@ -757,7 +757,7 @@ msgid "Lock Screen"
 msgstr "Lukitse näyttö"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Lu_kitse näyttö"
 
 #: ../plugins/actions/actions.c:184
