--- a/po/fr.po
+++ b/po/fr.po
@@ -753,7 +753,7 @@ msgid "Lock Screen"
 msgstr "Verrouiller l'écran"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "_Verrouiller l'écran"
 
 #: ../plugins/actions/actions.c:184
