--- a/po/gl.po
+++ b/po/gl.po
@@ -775,7 +775,7 @@ msgid "Lock Screen"
 msgstr "Bloquear a pantalla"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "B_loquear a pantalla"
 
 #: ../plugins/actions/actions.c:180
