--- a/po/he.po
+++ b/po/he.po
@@ -760,7 +760,7 @@ msgid "Lock Screen"
 msgstr "נעילת מסך"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "_נעילת המסך"
 
 #: ../plugins/actions/actions.c:184
