--- a/po/hr.po
+++ b/po/hr.po
@@ -750,7 +750,7 @@ msgid "Lock Screen"
 msgstr "Zaključaj zaslon"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Z_aključaj zaslon"
 
 #: ../plugins/actions/actions.c:180
