--- a/po/hu.po
+++ b/po/hu.po
@@ -722,7 +722,7 @@ msgid "Lock Screen"
 msgstr "Képernyő zárolása"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Képernyő _zárolása"
 
 #: ../plugins/actions/actions.c:184
