--- a/po/id.po
+++ b/po/id.po
@@ -764,7 +764,7 @@ msgid "Lock Screen"
 msgstr "Kunci Layar"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "K_unci Layar"
 
 #: ../plugins/actions/actions.c:184
