--- a/po/it.po
+++ b/po/it.po
@@ -809,7 +809,7 @@ msgstr "Blocca lo schermo"
 
 # Tooltip del pulsante delle azioni
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "_Blocca schermo"
 
 # Tooltip del pulsante delle azioni
