--- a/po/ja.po
+++ b/po/ja.po
@@ -733,7 +733,7 @@ msgid "Lock Screen"
 msgstr "画面をロック"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "画面をロック(_O)"
 
 #: ../plugins/actions/actions.c:180
