--- a/po/kk.po
+++ b/po/kk.po
@@ -760,7 +760,7 @@ msgid "Lock Screen"
 msgstr "Экранды бұғаттау"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Экра_нды бұғаттау"
 
 #: ../plugins/actions/actions.c:184
