--- a/po/ko.po
+++ b/po/ko.po
@@ -717,7 +717,7 @@ msgid "Lock Screen"
 msgstr "화면 잠금"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "화면 잠금(_O)"
 
 #: ../plugins/actions/actions.c:184
