--- a/po/nn.po
+++ b/po/nn.po
@@ -765,7 +765,7 @@ msgid "Lock Screen"
 msgstr "Lås skjermen"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "_Lås skjermen"
 
 #: ../plugins/actions/actions.c:180
