--- a/po/pl.po
+++ b/po/pl.po
@@ -781,7 +781,7 @@ msgid "Lock Screen"
 msgstr "Zablokowanie ekranu"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "_Zablokuj ekran"
 
 #: ../plugins/actions/actions.c:180
