--- a/po/pt.po
+++ b/po/pt.po
@@ -712,7 +712,7 @@ msgid "Lock Screen"
 msgstr "Bloquear ecrã"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Bl_oquear ecrã"
 
 #: ../plugins/actions/actions.c:180
