--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -780,7 +780,7 @@ msgid "Lock Screen"
 msgstr "Bloquear tela"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Bl_oquear tela"
 
 #: ../plugins/actions/actions.c:180
