--- a/po/ru.po
+++ b/po/ru.po
@@ -788,7 +788,7 @@ msgid "Lock Screen"
 msgstr "Блокировка экрана"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "_Блокировка экрана"
 
 #: ../plugins/actions/actions.c:184
