--- a/po/sk.po
+++ b/po/sk.po
@@ -773,7 +773,7 @@ msgid "Lock Screen"
 msgstr "Zamknúť obrazovku"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Zamknúť _obrazovku"
 
 #: ../plugins/actions/actions.c:184
