--- a/po/te.po
+++ b/po/te.po
@@ -732,7 +732,7 @@ msgid "Lock Screen"
 msgstr "తెరకు తాళంవేయి"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "తెరకు తాళంవేయి (_o)"
 
 #: ../plugins/actions/actions.c:184
