--- a/po/tr.po
+++ b/po/tr.po
@@ -781,7 +781,7 @@ msgid "Lock Screen"
 msgstr "Ekranı Kilitle"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Ekranı K_ilitle"
 
 #: ../plugins/actions/actions.c:180
