--- a/po/uk.po
+++ b/po/uk.po
@@ -767,7 +767,7 @@ msgid "Lock Screen"
 msgstr "Блокувати екран"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "_Блокувати екран"
 
 #: ../plugins/actions/actions.c:184
