--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -753,7 +753,7 @@ msgid "Lock Screen"
 msgstr "锁屏"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "锁屏(_O)"
 
 #: ../plugins/actions/actions.c:180
