--- a/po/de.po
+++ b/po/de.po
@@ -798,7 +798,7 @@ msgid "Lock Screen"
 msgstr "Bildschirm sperren"
 
 #: ../plugins/actions/actions.c:174
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "Bildschirm _sperren"
 
 #: ../plugins/actions/actions.c:180
