--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -712,7 +712,7 @@ msgid "Lock Screen"
 msgstr "鎖住螢幕"
 
 #: ../plugins/actions/actions.c:179
-msgid "L_ock Screen"
+msgid "Loc_k Screen"
 msgstr "鎖住螢幕(_O)"
 
 #: ../plugins/actions/actions.c:184
