Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+4.9.2
+=====
+- Launcher: Fix desktop file monitoring on some systems.
+- Panel: Improved DnD markers.
+- Panel: Fix invalid autohide with socket dialog (bug #8617).
+- Panel: Remove duplicated function.
+- Panel: Remove duplicated function.
+- Actions: Show translated strings (bug #8660).
+- Check for sed using a macro.
+- Actions: Fix mnemonics conflict (bug #8657).
+- Clock: Fix compiler warning (bug #8648).
+- Bump version-info of libxfce4panel.
+- Translation updates: Arabic, Catalan (Valencian), Czech, Danish, 
+  German, Greek, Esperanto, Spanish (Castilian), Estonian, Basque, 
+  Persian, Finnish, French, Galician, Hebrew, Croatian, Hungarian, 
+  Indonesian, Italian, Japanese, Kazakh, Korean, Lithuanian, Dutch 
+  (Flemish), Norwegian Nynorsk, Polish, Portuguese, Portuguese 
+  (Brazilian), Russian, Slovak, Telugu, Turkish, Ukrainian, Chinese 
+  (China), Chinese (Taiwan).
+
 4.9.1
 =====
 - Panel: Don't destroy window when focussed and Alt+F4 is
