Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+4.10.0
+======
+- Use correct LGPL licenses in the libs.
+- Restore child properties when moving a plugin.
+- Migrate: Use correct pointer for action migrate (bug #8781).
+- Migrate: Don't try to migrate already migrated plugin (bug #8778).
+- Translation updates: German, English (United Kingdom), Spanish
+  (Castilian), French, Galician, Hungarian, Japanese, Korean, Dutch
+  (Flemish), Polish, Portuguese, Portuguese (Brazilian), Romanian,
+  Chinese (China).
+
 4.9.2
 =====
 - Launcher: Fix desktop file monitoring on some systems.
@@ -10,12 +21,12 @@
 - Actions: Fix mnemonics conflict (bug #8657).
 - Clock: Fix compiler warning (bug #8648).
 - Bump version-info of libxfce4panel.
-- Translation updates: Arabic, Catalan (Valencian), Czech, Danish, 
-  German, Greek, Esperanto, Spanish (Castilian), Estonian, Basque, 
-  Persian, Finnish, French, Galician, Hebrew, Croatian, Hungarian, 
-  Indonesian, Italian, Japanese, Kazakh, Korean, Lithuanian, Dutch 
-  (Flemish), Norwegian Nynorsk, Polish, Portuguese, Portuguese 
-  (Brazilian), Russian, Slovak, Telugu, Turkish, Ukrainian, Chinese 
+- Translation updates: Arabic, Catalan (Valencian), Czech, Danish,
+  German, Greek, Esperanto, Spanish (Castilian), Estonian, Basque,
+  Persian, Finnish, French, Galician, Hebrew, Croatian, Hungarian,
+  Indonesian, Italian, Japanese, Kazakh, Korean, Lithuanian, Dutch
+  (Flemish), Norwegian Nynorsk, Polish, Portuguese, Portuguese
+  (Brazilian), Russian, Slovak, Telugu, Turkish, Ukrainian, Chinese
   (China), Chinese (Taiwan).
 
 4.9.1
