NEWS: copy changes from 4.10.1

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+4.10.1
+======
+- Bugfix in icon/pixbuf resizing code.
+- Fix icons not probably resizing when requested.
+- Autotools updates.
+- Ignore GVarueArray compiler warning.
+- Use G_ENABLE_DEBUG to set fatal messages.
+- Fixed DnD markers with non-square small items.
+- Actions: Fix logic of session saving (bug #8857).
+- Panel: Emit save signal for plugins.
+- Libxfce4-panel: Fix typo in the API docs.
+- Translation updates: Arabic, Bulgarian, German, Croatian, Polish,
+  Serbian, Swedish, Turkish, Uyghur.
+
 4.10.0
 ======
 - Use correct LGPL licenses in the libs.
