Updates for the release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+4.11.1
+======
+- Action Buttons: Fix panel autohide (bug #8960) (Petr Gajdůšek).
+- Application sMenu: fixed incorrect initial icon size in some Gtk themes.
+- Window Buttons: fixed rendering of minimized window buttons.
+- Applications Menu: changed default button title to "Applications".
+- Window Buttons: wrap windows when scrolling through window list
+  (Andre Miranda).
+- libxfce4panel: preserve ArrowButton relief during blinking.
+- Window Buttons: prevent several buttons to be selected at once.
+- Action Buttons: default to a horizontal button layout in the deskbar mode.
+- Translation updates: ja, sv, hr, es, de, vi, ast, nb, it, bg, fr, nl, uk,
+  zh_CN, kk, pl, zh_TW, ru, is, nb, id, th, pt, he, en_AU, pt_BR, sr, ms
+
 4.11.0
 ======
 - Window Buttons: Improve the tasklist multimonitor handling.
